Added media query

--- a/Week1/homework/js-exercises/RandomDogsPhoto.html
+++ b/Week1/homework/js-exercises/RandomDogsPhoto.html
@@ -53,6 +53,7 @@
       }
 
       button {
+        width: 100%;
         padding: 0.8rem;
         border: none;
         font-size: 1.5rem;
@@ -71,6 +72,16 @@
 
       button:active {
         background: #136136;
+      }
+
+      @media (max-width: 935px){
+        .container{
+          flex-wrap: wrap;
+        }
+
+        .card {
+          width: 100%;
+        }
       }
     </style>
   </head>
