Finished HackYourRepo app

--- a/hackyourrepo-app/index.html
+++ b/hackyourrepo-app/index.html
@@ -20,6 +20,22 @@
     <link rel="stylesheet" href="./style.css" />
   </head>
   <body>
+    <div class="root">
+      <header class="header">
+        <p>HYF Repositories</p>
+        <select class="selectMenu" id="selectMenu"></select>
+      </header>
+      
+      <main class="main-container">
+        <section class="repo-container">
+         <div class="repo-content" id="repo-content"></div>
+        </section>
+  
+        <section class="contributors-container">
+          <p>Contributors</p>
+        </section>
+      </main>
+    </div>
     <script src="./script.js"></script>
   </body>
 </html>
