--- a/hackyourrepo-app/index.html
+++ b/hackyourrepo-app/index.html
@@ -20,6 +20,7 @@
     <link rel="stylesheet" href="./style.css" />
   </head>
   <body>
+    <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
     <script src="./script.js"></script>
   </body>
 </html>
